[#548] Modified the Model Instance metadata terms and did general enhancement

--- a/hs_core/templates/pages/metadata_terms.html
+++ b/hs_core/templates/pages/metadata_terms.html
@@ -825,10 +825,10 @@
             <li><strong>Label: </strong>Model Output</li>
             <li><strong>Description: </strong>A HydroShare class that encapsulates all the metadata elements related to Model Instance resource output files</li>
         </ul>
-    <a name="IncludesModelOutput"></a>
+    <a name="includesModelOutput"></a>
         <ul >
-            <li><strong>Term: </strong>IncludesModelOutput</li>
-            <li><strong>URI: </strong><a href="#IncludesModelOutput">http://www.hydroshare.org/terms/IncludesModelOutput</a></li>
+            <li><strong>Term: </strong>includesModelOutput</li>
+            <li><strong>URI: </strong><a href="#includesModelOutput">http://www.hydroshare.org/terms/includesModelOutput</a></li>
             <li><strong>Label: </strong>Includes output</li>
             <li><strong>Description: </strong>A boolean value that indicates if the output files are included with the uploaded content</li>
         </ul>
@@ -840,19 +840,19 @@
             <li><strong>Label: </strong>Executed By</li>
             <li><strong>Description: </strong>A HydroShare class that defines the Model Program that executes the current resource</li>
         </ul>
-    <a name="ModelProgramName"></a>
+    <a name="modelProgramName"></a>
         <ul >
-            <li><strong>Term: </strong>ModelProgramName</li>
-            <li><strong>URI: </strong><a href="#ModelProgramName">http://www.hydroshare.org/terms/ModelProgramName</a></li>
+            <li><strong>Term: </strong>modelProgramName</li>
+            <li><strong>URI: </strong><a href="#modelProgramName">http://www.hydroshare.org/terms/modelProgramName</a></li>
             <li><strong>Label: </strong>Model name</li>
             <li><strong>Description: </strong>The name of the model that executes the current resource</li>
         </ul>
-    <a name="ModelProgramURL"></a>
+    <a name="modelProgramIdentifier"></a>
         <ul >
-            <li><strong>Term: </strong>ModelProgramURL</li>
-            <li><strong>URI: </strong><a href="#ModelProgramURL">http://www.hydroshare.org/terms/ModelProgramURL</a></li>
-            <li><strong>Label: </strong>Resource URL</li>
-            <li><strong>Description: </strong>The HydroShare URL of the Model Program resource that executes the current resource</li>
+            <li><strong>Term: </strong>modelProgramIdentifier</li>
+            <li><strong>URI: </strong><a href="#modelProgramIdentifier">http://www.hydroshare.org/terms/modelProgramIdentifier</a></li>
+            <li><strong>Label: </strong>URI</li>
+            <li><strong>Description: </strong>The HydroShare identifier of the Model Program resource that executes the current resource</li>
         </ul>
 
     <h3>SWAT Model Instance Resource Type Description</h3>
