--- a/hs_modelinstance/templates/pages/modelinstanceresource.html
+++ b/hs_modelinstance/templates/pages/modelinstanceresource.html
@@ -43,7 +43,7 @@
 
                             </div>
 
-                            <div class="col-sm-4"><strong>Resource URL</strong></div>
+                            <div class="col-sm-4"><strong>Resource URI</strong></div>
 
                             <div class="col-sm-8">
                                 {% if request.is_secure %}
