--- a/theme/static/css/hydroshare_core.css
+++ b/theme/static/css/hydroshare_core.css
@@ -1093,6 +1093,10 @@ span.remove {
     padding-left: 15px;
 }
 
+.glyphicon-info-sign {
+    top: 2px;
+}
+
 #resourceSpecificTab {
     overflow-x: hidden;
 }
