--- a/hs_core/templates/search/search.html
+++ b/hs_core/templates/search/search.html
@@ -1,48 +1,22 @@
-<html>
-<head>
-<title>Solr Search</title>
-</head>
-
-<body>
-
-
-{% block content %}
-    <h2>Search</h2>
-
-    <form method="get" action=".">
-        <table>
+<form method="get" action=".">
+    <table>
+        <tbody>
             {{ form.as_table }}
             <tr>
                 <td>&nbsp;</td>
-                <td>
-                    <input type="submit" value="Search">
-                </td>
+                <td><input type="submit" value="Search"></td>
             </tr>
-        </table>
+        </tbody>
+    </table>
+</form>
 
-        {% if query %}
-            <h3>Results</h3>
-            {% for result in page.object_list %}
-                <p>
-                    <a href="{{ result.object.get_absolute_url }}">{{ result.object.title }}</a>
-                </p>
-            {% empty %}
-                <p>No results found.</p>
-                <p>No results found.</p>
-            {% endfor %}
-
-            {% if page.has_previous or page.has_next %}
-                <div>
-                    {% if page.has_previous %}<a href="?q={{ query }}&amp;page={{ page.previous_page_number }}">{% endif %}&laquo; Previous{% if page.has_previous %}</a>{% endif %}
-                    |
-                    {% if page.has_next %}<a href="?q={{ query }}&amp;page={{ page.next_page_number }}">{% endif %}Next &raquo;{% if page.has_next %}</a>{% endif %}
-                </div>
-            {% endif %}
-        {% else %}
-            {# Show some example queries to run, maybe query syntax, something else? #}
-        {% endif %}
-    </form>
-{% endblock %}
-
-</body>
-</html>
+{% if query %}
+    {% for result in page.object_list %}
+        <div class="search_result">
+            <h3><a href="{{ result.object.get_absolute_url }}">{{ result.object.title }}</a></h3>
+            <p>{{ result.object.body|truncatewords:80 }}</p>
+        </div>
+    {% empty %}
+        <p>Sorry, no results found.</p>
+    {% endfor %}
+{% endif %}
