--- a/hs_core/templates/pages/metadata_terms.html
+++ b/hs_core/templates/pages/metadata_terms.html
@@ -861,18 +861,18 @@
         from simulation input files. These specific metadata elements are as follows:
     </p>
     <br/>
-    <a name="ModelObjective"></a>
+    <a name="modelObjective"></a>
         <ul >
-            <li><strong>Term: </strong>ModelObjective</li>
-            <li><strong>URI: </strong><a href="#ModelObjective">http://www.hydroshare.org/terms/ModelObjective</a></li>
+            <li><strong>Term: </strong>modelObjective</li>
+            <li><strong>URI: </strong><a href="#modelObjective">http://www.hydroshare.org/terms/modelObjective</a></li>
             <li><strong>Label: </strong>Model Objective</li>
             <li><strong>Description: </strong>The objective of the Model (e.g. Hydrology, Water quality, BMPs, and Climate / Landuse Change, etc.)</li>
         </ul>
     <br/>
-    <a name="SimulationType"></a>
+    <a name="simulationType"></a>
         <ul >
-            <li><strong>Term: </strong>SimulationType</li>
-            <li><strong>URI: </strong><a href="#SimulationType">http://www.hydroshare.org/terms/SimulationType</a></li>
+            <li><strong>Term: </strong>simulationType</li>
+            <li><strong>URI: </strong><a href="#simulationType">http://www.hydroshare.org/terms/simulationType</a></li>
             <li><strong>Label: </strong>Simulation Type</li>
             <li><strong>Description: </strong>The type of the simulation used (e.g. Normal Simulation, Sensitivity Analysis, and Auto-Calibration)</li>
         </ul>
@@ -961,24 +961,24 @@
             <li><strong>Label: </strong>Number of HRUs</li>
             <li><strong>Description: </strong>The number of the Hydrologic Response Units within the watershed</li>
         </ul>
-    <a name="DEMResolution"></a>
+    <a name="demResolution"></a>
         <ul >
-            <li><strong>Term: </strong>DEMResolution</li>
-            <li><strong>URI: </strong><a href="#DEMResolution">http://www.hydroshare.org/terms/DEMResolution</a></li>
+            <li><strong>Term: </strong>demResolution</li>
+            <li><strong>URI: </strong><a href="#demResolution">http://www.hydroshare.org/terms/demResolution</a></li>
             <li><strong>Label: </strong>DEM resolution in meters</li>
             <li><strong>Description: </strong>The resolution of the Digital Elevation Model in meters</li>
         </ul>
-    <a name="DEMSourceName"></a>
+    <a name="demSourceName"></a>
         <ul >
-            <li><strong>Term: </strong>DEMSourceName</li>
-            <li><strong>URI: </strong><a href="#DEMSourceName">http://www.hydroshare.org/terms/DEMSourceName</a></li>
+            <li><strong>Term: </strong>demSourceName</li>
+            <li><strong>URI: </strong><a href="#demSourceName">http://www.hydroshare.org/terms/demSourceName</a></li>
             <li><strong>Label: </strong>DEM source name</li>
             <li><strong>Description: </strong>The name of the Digital Elevation Model dataset provider</li>
         </ul>
-    <a name="DEMSourceURL"></a>
+    <a name="demSourceURL"></a>
         <ul >
-            <li><strong>Term: </strong>DEMSourceURL</li>
-            <li><strong>URI: </strong><a href="#DEMSourceURL">http://www.hydroshare.org/terms/DEMSourceURL</a></li>
+            <li><strong>Term: </strong>demSourceURL</li>
+            <li><strong>URI: </strong><a href="#demSourceURL">http://www.hydroshare.org/terms/demSourceURL</a></li>
             <li><strong>Label: </strong>DEM source URL</li>
             <li><strong>Description: </strong>The URL of the Digital Elevation Model dataset (if applicable)</li>
         </ul>
@@ -1032,18 +1032,18 @@
             <li><strong>Label: </strong>Flow routing method</li>
             <li><strong>Description: </strong>The flow routing method used</li>
         </ul>
-    <a name="PETEstimationMethod"></a>
+    <a name="petEstimationMethod"></a>
         <ul >
-            <li><strong>Term: </strong>PETEstimationMethod</li>
-            <li><strong>URI: </strong><a href="#PETEstimationMethod">http://www.hydroshare.org/terms/PETEstimationMethod</a></li>
+            <li><strong>Term: </strong>petEstimationMethod</li>
+            <li><strong>URI: </strong><a href="#petEstimationMethod">http://www.hydroshare.org/terms/petEstimationMethod</a></li>
             <li><strong>Label: </strong>PET estimation method</li>
             <li><strong>Description: </strong>The Potential EvapoTranspiration estimation method used</li>
         </ul>
     <br/>
-    <a name="ModelParameter"></a>
+    <a name="modelParameter"></a>
         <ul >
-            <li><strong>Term: </strong>ModelParameter</li>
-            <li><strong>URI: </strong><a href="#ModelParameter">http://www.hydroshare.org/terms/ModelParameter</a></li>
+            <li><strong>Term: </strong>modelParameter</li>
+            <li><strong>URI: </strong><a href="#modelParameter">http://www.hydroshare.org/terms/modelParameter</a></li>
             <li><strong>Label: </strong>Model Parameter</li>
             <li><strong>Description: </strong>The parameters used in the model (e.g. Crop rotation, Title drainage , Point source, Fertilizer,
                 Tilage operation, Inlet of draining watershed, Irrigation operation, etc.)</li>
