fixed model webpage reference on landing page [#632]

--- a/hs_model_program/templates/pages/modelprogramresource.html
+++ b/hs_model_program/templates/pages/modelprogramresource.html
@@ -67,7 +67,7 @@
                             <div class="col-sm-4">
                                 <a class="mpElement" href="#" data-content="{{ mphelptext.modelWebsite}}" data-toggle="popover" data-trigger="hover">Website:</a>
                             </div>
-                            <div class="col-sm-8"><a href="{{ mpmetadata.modelWebsite }}" target="_blank">{{ mpmetadata.program_website }}</a></div>
+                            <div class="col-sm-8"><a href="{{ mpmetadata.modelWebsite }}" target="_blank">{{ mpmetadata.modelWebsite }}</a></div>
                         </div>
 
                         <hr>
